<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_name">Bazar</string>
    <!--Settings-->
    <string name="settings_label_login">Имя пользователя</string>
    <string name="settings_default_bio">О себе</string>
    <string name="settings_label_bio">Напишите немного о себе</string>
    <string name="settings_default_username">Shamil Aliev</string>
    <string name="settings_default_status">online</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="settings_default_number">+79387776749</string>
    <string name="settings_phone_number_label">Нажмите чтобы изменить номер телефона</string>
    <string name="settings_default_login">ShamilAliev</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="register_enter_code">Введите проверочный код</string>
    <string name="register_text_sent">Мы отправили SMS c кодом проверки на Ваш телефон</string>
    <string name="register_hint_default_code">- - - - - -</string>
    <string name="register_title_your_phone">Ваш телефон</string>
    <string name="register_phone_hint">- --- --- ----</string>
    <string name="settings_hint_input_name">Имя</string>
    <string name="settings_hint_input_surname">Фамилия</string>
    <string name="settings_hint_input_username">username</string>
    <string name="toast_data_update">Данные обновлены</string>
    <string name="settings_input_bio">bio</string>
</resources>