<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_header_bloc"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settings_user_photo"
            android:layout_width="@dimen/settings_user_photo_width"
            android:layout_height="@dimen/settings_user_photo_height"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:src="@drawable/default_user"
            app:civ_border_color="@color/colorGray"
            app:civ_circle_background_color="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settings_full_name"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settings_user_photo"
            app:layout_constraintTop_toTopOf="@+id/settings_user_photo"
            tools:text="@string/settings_default_username" />

        <TextView
            android:id="@+id/settings_status"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settings_user_photo"
            app:layout_constraintTop_toTopOf="@+id/settings_user_photo"
            tools:text="@string/settings_default_status" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/settings_text_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_large_margin"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_header_bloc"
        android:text="@string/settings_text_account" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_number_phone"
        style="@style/setting_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_text_account">

        <TextView
            android:id="@+id/settings_phone_number"
            style="@style/normal_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_number_phone"
            tools:text="@string/settings_default_number" />

        <TextView
            android:id="@+id/settings_label_phone_number"
            style="@style/small_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_phone_number"
            android:text="@string/settings_phone_number_label" />

        <View
            style="@style/separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_label_phone_number" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_username"
        style="@style/setting_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_btn_change_number_phone">

        <TextView
            android:id="@+id/settings_username"
            style="@style/normal_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_username"
            tools:text="@string/settings_default_login" />

        <TextView
            android:id="@+id/settings_label_username"
            style="@style/small_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_username"
            android:text="@string/settings_label_login" />

        <View
            style="@style/separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_label_username" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_bio"
        style="@style/setting_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_btn_change_username">

        <TextView
            android:id="@+id/settings_bio"
            style="@style/normal_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_bio"
            tools:text="@string/settings_default_bio" />

        <TextView
            android:id="@+id/settings_label_bio"
            style="@style/small_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_bio"
            android:text="@string/settings_label_bio" />

        <View
            style="@style/separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_label_bio" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_change_photo"
        android:layout_width="@dimen/settings_user_photo_width"
        android:layout_height="@dimen/settings_user_photo_height"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:src="@drawable/ic_camera"
        app:civ_border_color="@color/colorGray"
        app:civ_border_width="@dimen/settings_user_photo_border"
        app:civ_circle_background_color="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/settings_header_bloc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_header_bloc" />


</androidx.constraintlayout.widget.ConstraintLayout>