<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.EnterCodeFragment">

    <ImageView
        android:id="@+id/registerImage"
        android:layout_width="@dimen/settings_btn_change_photo_width"
        android:layout_height="@dimen/settings_btn_change_photo_height"
        android:layout_marginTop="@dimen/vertical_large_margin"
        android:src="@drawable/ic_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registerEnterCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register_enter_code"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/normal_text_size"
        android:textStyle="bold"
        android:layout_margin="@dimen/vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerImage" />

    <TextView
        android:id="@+id/registerEnterCodeSent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/small_text"
        android:layout_margin="@dimen/vertical_margin"
        android:gravity="center"
        android:text="@string/register_text_sent"
        app:layout_constraintTop_toBottomOf="@id/registerEnterCode"/>

    <EditText
        style="@style/edit_text"
        android:layout_width="wrap_content"
        android:id="@+id/registerCodeInput"
        android:autofillHints=""
        android:maxLength="6"
        android:gravity="center"
        android:hint="@string/register_hint_default_code"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerEnterCodeSent" />


</androidx.constraintlayout.widget.ConstraintLayout>